prod/directory/front-end/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: directory
  annotations:
    linkerd.io/inject: enabled
  name: directory
