prod/directory/front-end/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: directory-fe
  namespace: directory
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: directory-fe
  template: 
    metadata:
      labels:
        app: directory-fe
    spec:
      containers:
      - name: directory-fe
        image: digitalcollab/directory:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "1Gi"
            cpu: "0.2"
