prod/directory/front-end/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: directory-fe
  namespace: directory
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 5000
  selector: 
    app: directory-fe
